Fixed the source of images and style

--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chain App Dev</title>
 
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="assets/css/fontawesome.css" rel="stylesheet" />
-    <link href="assets/css/templatemo-chain-app-dev.css" rel="stylesheet" />
-    <link href="assets/css/animated.css" rel="stylesheet" />
-    <link href="assets/css/owl.css" rel="stylesheet" />
-
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/fontawesome.css" />
     <link rel="stylesheet" href="/assets/css/templatemo-chain-app-dev.css" />
+    <link rel="stylesheet" href="/assets/css/animated.css" />
+    <link rel="stylesheet" href="/assets/css/owl.css" />
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/owl-carousel.js"></script>
-    <script src="assets/js/animation.js"></script>
-    <script src="assets/js/imagesloaded.js"></script>
-    <script src="assets/js/custom.js"></script>
-
-     <script type="module" src="/src/main.jsx"></script>
-
-     <script src="/assets/js/custom.js"></script>
-
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="/assets/js/owl-carousel.js"></script>
+    <script src="/assets/js/animation.js"></script>
+    <script src="/assets/js/imagesloaded.js"></script>
+    <script src="/assets/js/custom.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
